[tool.poetry]
name = "mmc"
version = "0.1.2"
description = "Minimal Mattermost API client"
authors = ["Baptiste Fontaine <baptiste@bixoto.com>"]
license = "MIT"
include = ["mmc/py.typed"]
homepage = "https://github.com/Bixoto/mmc"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
api-session = "^1.4.3" # 1.5.0+ is not compatible with Python 3.8


[tool.poetry.group.dev.dependencies]
mypy = "^1"
pytest = "^8"
pytest-cov = "^5" # 6.x+ is not compatible with Python 3.8
ruff = "^0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py38"
ignore-init-module-imports = true
