[project]
name = "mmc"
version = "0.1.2"
description = "Minimal Mattermost API client"
authors = [{ name = "Baptiste Fontaine", email = "baptiste@bixoto.com" }]
requires-python = ">=3.8,<4"
readme = "README.md"
license = "MIT"
dependencies = ["api-session>=1.4.3,<2"]

[project.urls]
Homepage = "https://github.com/Bixoto/mmc"

[dependency-groups]
dev = [
    "mypy>=1,<2",
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "ruff>=0,<1",
]

[tool.hatch.build.targets.sdist.force-include]
"mmc/py.typed" = "mmc/py.typed"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py38"
ignore-init-module-imports = true
