[project]
name = "mmc"
version = "0.2.0"
description = "Minimal Mattermost API client"
authors = [{ name = "Baptiste Fontaine", email = "baptiste@bixoto.com" }]
requires-python = ">=3.9,<4"
readme = "README.md"
license = "MIT"
dependencies = ["api-session>=1.5.1,<2"]

[project.urls]
Homepage = "https://github.com/Bixoto/mmc"

[dependency-groups]
dev = [
    "mypy>=1,<2",
    "pytest>=8,<9", # 9.x requires Python 3.10
    "pytest-cov>=7,<8", # 8.x requires Python 3.10
    "ruff>=0,<1",
]

[tool.hatch.build.targets.sdist.force-include]
"mmc/py.typed" = "mmc/py.typed"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py39"
[tool.ruff.lint]
ignore-init-module-imports = true
